--- a/default.conf
+++ b/default.conf
@@ -4,8 +4,8 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    limit_conn addr 2;
-    limit_rate 1000;
+    limit_conn addr 10;
+    limit_rate 1000000;
 
     location / {
         root   /usr/share/nginx/html;
